--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </p>
     <form action="https://api.web3forms.com/submit" method="POST">
       <!-- Web3Forms Token -->
-      <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
+      <input type="hidden" name="access_key" value="9b155b59-98ee-4573-843b-573c7b5dd22b">
 
       <label>Как тебя зовут?</label>
       <input type="text" name="Имя" placeholder="Можно просто имя или никнейм">
