--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
       Преподаватели «Миски Риса» сами предложили собрать честную и тёплую обратную связь — чтобы сделать занятия ещё лучше 🌿<br><br>
       Форма короткая, на 3–5 минут. Можно анонимно 🙏
     </p>
-    <form action="https://api.web3forms.com/submit" method="POST">
+    <form action="https://formbold.com/s/9ErQR" method="POST">
       <!-- Web3Forms Token -->
-      <input type="hidden" name="access_key" value="9b155b59-98ee-4573-843b-573c7b5dd22b">
 
       <label>Как тебя зовут?</label>
       <input type="text" name="Имя" placeholder="Можно просто имя или никнейм">
