--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background-image: url('https://lisichkin8585.github.io/feedback-form/chinese_wave_pattern.jpg');
+      background-image: url('chinese_wave_pattern.jpg');
       background-repeat: repeat;
-      background-size: 100px auto;
+      background-size: 200px auto;
       color: #333;
     }
     .container {
@@ -73,7 +73,7 @@
 <body>
   <div class="container">
     <div class="logo">
-      <img src="https://lisichkin8585.github.io/feedback-form/photo_2025-07-17_14-57-46.jpg" alt="Миска Риса">
+      <img src="photo_2025-07-17_14-57-46.jpg" alt="Миска Риса">
     </div>
     <h1>🧧 Обратная связь от тебя — наша суперсила!</h1>
     <p class="description">
