--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background-image: url('chinese_wave_pattern.jpg');
+      background-image: url('ChatGPT%20Image%2020%20июл.%202025%20г.,%2012_02_42.png');
       background-repeat: repeat;
-      background-size: 200px auto;
+      background-size: 300px auto;
       color: #333;
     }
     .container {
