--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background-image: url('background-pattern.png');
+      background-image: url('background-pattern.png.png');
       background-repeat: repeat;
       background-size: 300px auto;
       color: #333;
